# AppliedMath.IIISem

./: .gitignore  README.md
Lab1/: CMakeLists.txt  graphs_and_tables.ipynb  main.cpp  main.py
Lab1/Abstractions/: BaseAlgorithm.h  BaseFunc.h  IAlgorithm.h  IFunc.h
Lab1/Algorithms/: BrentAlgorithm.cpp  BrentAlgorithm.h  DichotomyAlgorithm.h  FibonacciAlgorithm.h  GoldenRatioAlgorithm.h  ParabolaAlgorithm.h  ParabolaAlgorithm.hpp  brent_algorithm.py  dichotomy_algorithm.py  fibonacci_algorithm.py  golden_ratio_algorithm.py  parabola_algorithm.py
Lab1/Functions/: Sinx_x3.h
Lab1/Python/: main.py
Lab1/algorithms/: brent_algorithm.py  dichotomy_algorithm.py  fibonacci_algorithm.py  golden_ratio_algorithm.py  parabola_algorithm.py
Lab2/: help.md  main.py  visualization.ipynb
Lab2/abstarctions/: gradient_params.py  gradientparams.py  plot_params.py  plotparams.py
Lab2/algorithms/: generate_plot.py  gradient.py  gradientDescent.py  stepSizeFunction.py
Lab2/algorithms/fletcherReevesAlgorithm/: fletcherReeves.py
Lab2/algorithms/stepSizeAlgorithms/: __init__.py  constStep.py  fibonacciStep.py  fibonacci_algorithm.py  goldenRatioStep.py  golden_ratio_algorithm.py  splittingStep.py
Lab2/oracle/: firstOrderOracle.py
Lab2/oracle/testOracles/: oracle1.py  oracle2.py  (+2 more)
Lab3/: lu_tests.ipynb  main.py  tests.ipynb  tests.py
Lab3/tools/: conditionalNumber.py  generateGilbertMatrix.py  inverseMatrix.py  linearEquationsSystemSolve.py  luDecomposition.py  seidel.py
Lab4/: main.py
Lab4/tools/: condition_number.py  jacobi_method.py  matrix_generator.py  tables.ipynb
